force-app/main/default/objects/Employee__c/fields/Aadhar_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Number__c</fullName>
    <label>Aadhar Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>