force-app/main/default/objects/Employee__c/fields/Are_you_an_Immediate_Joiner__c.field-meta.xml
<CustomField>
    <fullName>Are_you_an_Immediate_Joiner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you an Immediate Joiner</label>
    <type>Checkbox</type>
</CustomField>