force-app/main/default/objects/Employee__c/fields/Available_Files__c.field-meta.xml
<CustomField>
    <fullName>Available_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available Files</label>
    <type>Checkbox</type>
</CustomField>