force-app/main/default/objects/Employee__c/fields/Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours__c</fullName>
    <label>Billable Hours</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>