force-app/main/default/objects/Employee__c/fields/Correspondence_Address__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Address__c</fullName>
    <description>Mailing address</description>
    <label>Correspondence  Address</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>