force-app/main/default/objects/Employee__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trainee Software Engineer</fullName>
            </value>
            <value>
                <fullName>Associate Software Engineer</fullName>
            </value>
            <value>
                <fullName>Software Engineer</fullName>
            </value>
            <value>
                <fullName>Senior Software Engineer</fullName>
            </value>
            <value>
                <fullName>Tech Lead</fullName>
            </value>
            <value>
                <fullName>Project Lead</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Solution Architect</fullName>
            </value>
            <value>
                <fullName>Technical Architect</fullName>
            </value>
            <value>
                <fullName>Delivery Head</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Senior Consultant</fullName>
            </value>
            <value>
                <fullName>Quality Assurance Engineer</fullName>
            </value>
            <value>
                <fullName>Senior Quality Assurance Engineer</fullName>
            </value>
            <value>
                <fullName>Quality Assurance Manager</fullName>
            </value>
            <value>
                <fullName>QA Lead</fullName>
            </value>
            <value>
                <fullName>Senior Analyst</fullName>
            </value>
            <value>
                <fullName>HR Generalist</fullName>
            </value>
            <value>
                <fullName>HR Specialist</fullName>
            </value>
            <value>
                <fullName>HR Administrator</fullName>
            </value>
            <value>
                <fullName>Human Resource Manager</fullName>
            </value>
            <value>
                <fullName>Chief Human Resource Officer</fullName>
            </value>
            <value>
                <fullName>TA Executive</fullName>
            </value>
            <value>
                <fullName>Customer Relationship Manager</fullName>
            </value>
            <value>
                <fullName>Customer Success Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>