force-app/main/default/objects/Employee__c/fields/device_type__c.field-meta.xml
<CustomField>
    <fullName>device_type__c</fullName>
    <label>device type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laptop</fullName>
            </value>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Office pc</fullName>
            </value>
            <value>
                <fullName>presonal pc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>