force-app/main/default/objects/Employee__c/fields/Emergency_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Number__c</fullName>
    <label>Emergency Contact Number</label>
    <type>Phone</type>
</CustomField>