force-app/main/default/objects/Employee__c/fields/Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code__c</fullName>
    <formula>&quot;TMC/&quot; &amp;   TEXT(YEAR( DATEVALUE( CreatedDate ))) &amp; &quot; /&quot;  &amp;   Employee_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Code</label>
    <type>Text</type>
</CustomField>