force-app/main/default/objects/Employee__c/fields/Employee_image__c.field-meta.xml
<CustomField>
    <fullName>Employee_image__c</fullName>
    <label>Employee image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>