force-app/main/default/objects/Employee__c/fields/Employee_Manager__c.field-meta.xml
<CustomField>
    <fullName>Employee_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Manager</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employees (Employee Manager)</relationshipLabel>
    <relationshipName>Employees1</relationshipName>
    <type>Lookup</type>
</CustomField>