force-app/main/default/objects/Employee__c/fields/Employee_Salary__c.field-meta.xml
<CustomField>
    <fullName>Employee_Salary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Salary</label>
    <referenceTo>Employee_Salary__c</referenceTo>
    <relationshipLabel>Employee</relationshipLabel>
    <relationshipName>Employee</relationshipName>
    <type>Lookup</type>
</CustomField>