force-app/main/default/objects/Employee__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internship</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Contractual</fullName>
            </value>
            <value>
                <fullName>Probation</fullName>
            </value>
            <value>
                <fullName>Sub-Contracted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>