force-app/main/default/objects/Employee__c/fields/Father_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Father_Contact_Number__c</fullName>
    <label>Father Contact Number</label>
    <type>Phone</type>
</CustomField>