force-app/main/default/objects/Employee__c/fields/IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Code__c</fullName>
    <label>IFSC Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>