force-app/main/default/objects/Employee__c/fields/Mother_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Mother_Contact_Number__c</fullName>
    <label>Mother Contact Number</label>
    <type>Phone</type>
</CustomField>