force-app/main/default/objects/Employee__c/fields/Official_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Official_Email_Address__c</fullName>
    <label>Official Email Address</label>
    <type>Email</type>
</CustomField>