force-app/main/default/objects/Employee__c/fields/Pan_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Pan_Card_Number__c</fullName>
    <label>Pan Card Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>