force-app/main/default/objects/Employee__c/fields/PF_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>PF_Account_Number__c</fullName>
    <label>PF Account Number</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>