force-app/main/default/objects/Employee__c/fields/Practice_Head__c.field-meta.xml
<CustomField>
    <fullName>Practice_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice Head</label>
    <referenceTo>Practice_Head__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>