force-app/main/default/objects/Employee__c/fields/Ready_to_Relocate__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_Relocate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ready to Relocate</label>
    <type>Checkbox</type>
</CustomField>