force-app/main/default/objects/Employee__c/fields/Relieving_Date__c.field-meta.xml
<CustomField>
    <fullName>Relieving_Date__c</fullName>
    <description>End date of service</description>
    <label>Relieving Date</label>
    <type>Date</type>
</CustomField>