force-app/main/default/objects/Employee__c/fields/Secondary_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact_Number__c</fullName>
    <label>Secondary Contact Number</label>
    <type>Phone</type>
</CustomField>