force-app/main/default/objects/Employee__c/fields/Service_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True = Agreed</description>
    <label>Service Agreement</label>
    <type>Checkbox</type>
</CustomField>