force-app/main/default/objects/Employee__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supervisor</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employees</relationshipLabel>
    <relationshipName>Employees</relationshipName>
    <type>Lookup</type>
</CustomField>