force-app/main/default/objects/Employee__c/fields/Supervisor_experience__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_experience__c</fullName>
    <formula>Supervisor__r.Techmatrix_Experience_In_years__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor experience</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>