force-app/main/default/objects/Employee__c/fields/Supervisor_Job_Titlee__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Job_Titlee__c</fullName>
    <formula>TEXT( Supervisor__r.Designation__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor Job Title</label>
    <type>Text</type>
</CustomField>