force-app/main/default/objects/Employee__c/fields/Supervisor_Namee__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Namee__c</fullName>
    <formula>Supervisor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor Name</label>
    <type>Text</type>
</CustomField>