force-app/main/default/objects/Employee__c/fields/Techmatrix_Experience_In_years__c.field-meta.xml
<CustomField>
    <fullName>Techmatrix_Experience_In_years__c</fullName>
    <formula>FLOOR((TODAY() - Joining_Date__c) / 365) + 
(MOD(FLOOR((TODAY() - Joining_Date__c) / 30), 12) / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Techmatrix Experience (In years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>