force-app/main/default/objects/Employee__c/fields/Total_Experience_in_year__c.field-meta.xml
<CustomField>
    <fullName>Total_Experience_in_year__c</fullName>
    <label>Total Experience(in year)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>