force-app/main/default/objects/Employee__c/fields/UAN_Number__c.field-meta.xml
<CustomField>
    <fullName>UAN_Number__c</fullName>
    <label>UAN Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>