force-app/main/default/objects/Employee__c/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <label>Work Location</label>
    <length>90</length>
    <type>Text</type>
</CustomField>