force-app/main/default/objects/Employee__c/fields/Work_Mode__c.field-meta.xml
<CustomField>
    <fullName>Work_Mode__c</fullName>
    <label>Work Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Work from Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>