force-app/main/default/objects/Employee__c/recordTypes/HR.recordType-meta.xml
<RecordType>
    <fullName>HR</fullName>
    <active>true</active>
    <label>HR</label>
</RecordType>