force-app/main/default/objects/Employee__c/recordTypes/Practice_Head.recordType-meta.xml
<RecordType>
    <fullName>Practice_Head</fullName>
    <active>true</active>
    <label>Practice Head</label>
</RecordType>