force-app/main/default/objects/Employee__c/validationRules/Aadhar_Numeric_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Aadhar_Numeric_Only</fullName>
    <active>true</active>
    <description>Aadhar number must be numeric only (no alphabets). And should be in this format (1111 1111 1111)</description>
    <errorConditionFormula>NOT(
  REGEX(Aadhar_Number__c, &quot;^[0-9]{4} [0-9]{4} [0-9]{4}$&quot;)
)</errorConditionFormula>
    <errorMessage>Aadhar number must be numeric only (no alphabets). And should be in this format (1111 1111 1111)</errorMessage>
</ValidationRule>