force-app/main/default/objects/Employee__c/validationRules/Active_Employee_Cleanup.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Employee_Cleanup</fullName>
    <active>true</active>
    <description>If Status is &quot;Active&quot;, Resigned Date &amp; Relieving Date should be blank.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Active&quot;),       
  OR(                                    
    NOT(ISBLANK( Date_of_Resignation__c )), 
    NOT(ISBLANK(Relieving_Date__c))
  )
)</errorConditionFormula>
    <errorMessage>Resignation Date and Relieving Date must be blank when status is Active</errorMessage>
</ValidationRule>