force-app/main/default/objects/Employee__c/validationRules/Contact_Number_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Number_Length</fullName>
    <active>true</active>
    <description>Contact Numbers must be exactly 10 digits</description>
    <errorConditionFormula>OR(
   ISBLANK( Primary_Contact_No__c ),
   NOT(REGEX( Primary_Contact_No__c ,&quot;[0-9]{10}$&quot;))
)</errorConditionFormula>
    <errorMessage>Please enter a valid 10-digit Primary Contact Number</errorMessage>
</ValidationRule>