force-app/main/default/objects/Employee__c/validationRules/DOB_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>DOB_Not_Future</fullName>
    <active>true</active>
    <description>Date of Birth cannot be today or in the future.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Date_of_Birth__c )),
     Date_of_Birth__c  &gt;= TODAY()

)</errorConditionFormula>
    <errorMessage>Date of birth can&apos;t be in future</errorMessage>
</ValidationRule>