force-app/main/default/objects/Employee__c/validationRules/EmployeeDepartment_PracticeHeadDepartmen.validationRule-meta.xml
<ValidationRule>
    <fullName>EmployeeDepartment_PracticeHeadDepartmen</fullName>
    <active>true</active>
    <description>Employee Department &amp; Practice Head Department should
be Equal.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK( TEXT( Department__c ) )),
  NOT(ISBLANK(TEXT(  Practice_Head__r.Department__c  ))),
TEXT( Department__c ) &lt;&gt; TEXT(  Practice_Head__r.Department__c  )
)</errorConditionFormula>
    <errorMessage>Employee Department &amp; Practice Head Department should
be Equal</errorMessage>
</ValidationRule>