force-app/main/default/objects/Employee__c/validationRules/Is_Manager_Checkbox_True.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Manager_Checkbox_True</fullName>
    <active>false</active>
    <description>On Employee Creation if you select manager then check
that employee Is_Manager checkbox should be true.</description>
    <errorConditionFormula>AND(
  ISNEW(),
 
   Is_Manager__c  = FALSE
)</errorConditionFormula>
    <errorMessage>On Employee Creation if you select manager then check
that employee Is_Manager checkbox should be true.</errorMessage>
</ValidationRule>