force-app/main/default/objects/Employee__c/validationRules/Joining_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Joining_Date_Not_Future</fullName>
    <active>true</active>
    <description>Joining Date cannot be in the future.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Joining_Date__c)),
  Joining_Date__c &gt; TODAY()
)</errorConditionFormula>
    <errorMessage>Joining Date cannot be in the future.</errorMessage>
</ValidationRule>