force-app/main/default/objects/Employee__c/validationRules/Joining_vs_DOB.validationRule-meta.xml
<ValidationRule>
    <fullName>Joining_vs_DOB</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Date_of_Birth__c )),
    NOT(ISBLANK( Joining_Date__c )),
    OR(
      Joining_Date__c &lt;=  Date_of_Birth__c ,
        Joining_Date__c &lt; ( Date_of_Birth__c + 18*365)
)
)</errorConditionFormula>
    <errorMessage>Joining Date must be after Date of Birth and employee must be at least 18 years old</errorMessage>
</ValidationRule>