force-app/main/default/objects/Employee__c/validationRules/PAN_Card_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_Card_Format</fullName>
    <active>true</active>
    <description>Please enter a valid PAN number in the format: ABCDE1234F</description>
    <errorConditionFormula>NOT(
  REGEX(Pan_Card_Number__c, &quot;^[A-Z]{5}[0-9]{4}[A-Z]{1}$&quot;)
)</errorConditionFormula>
    <errorMessage>PAN must match pattern: 5 letters + 4 digits + 1 letter (e.g.,ABCDE1234F)</errorMessage>
</ValidationRule>