force-app/main/default/objects/Employee__c/validationRules/Resign_Date_vs_Joining_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Resign_Date_vs_Joining_Date</fullName>
    <active>true</active>
    <description>Resignation Date must be greater than Joining Date.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK( Date_of_Resignation__c )),
  NOT(ISBLANK(Joining_Date__c)),
  Date_of_Resignation__c  &lt;= Joining_Date__c
)</errorConditionFormula>
    <errorMessage>Resignation Date must be after Joining Date</errorMessage>
</ValidationRule>