force-app/main/default/objects/Employee__c/validationRules/Work_Location_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Work_Location_Required</fullName>
    <active>true</active>
    <description>If Work Mode id &quot;Work From Office&quot;, then Work Location is required.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Work_Mode__c, &quot;Work From Office&quot;),
  ISBLANK(Work_Location__c)
)</errorConditionFormula>
    <errorMessage>If Work Mode id &quot;Work From Office&quot;, then Work Location is required.</errorMessage>
</ValidationRule>