force-app/main/default/objects/Employee__c/listViews/Admin_Queue_Employee.listView-meta.xml
<ListView>
    <fullName>Admin_Queue_Employee</fullName>
    <filterScope>Queue</filterScope>
    <label>Admin Queue</label>
    <queue>Admin_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>