force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Code__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Department__c</columns>
    <columns>Designation__c</columns>
    <columns>Related_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>