force-app/main/default/objects/Employee__c/listViews/All_Active_Employees.listView-meta.xml
<ListView>
    <fullName>All_Active_Employees</fullName>
    <columns>NAME</columns>
    <columns>Email_Address__c</columns>
    <columns>Work_Mode__c</columns>
    <columns>Department__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active Employees</label>
</ListView>