force-app/main/default/objects/Employee__c/listViews/IT_Queue_Employee.listView-meta.xml
<ListView>
    <fullName>IT_Queue_Employee</fullName>
    <filterScope>Queue</filterScope>
    <label>IT Queue</label>
    <queue>IT_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>